--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   sleek_circular_slider: ^1.1.0
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
